--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pomodoro-clock",
-  "home": "https://nicolasbg87.github.io/react-pomodoro-clock", 
+  "homepage": "https://nicolasbg87.github.io/react-pomodoro-clock/", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
